<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:isScrollContainer="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="machine.microspin.com.microspinconsole.DashboardRunMode">

    <LinearLayout
        android:id="@+id/settingsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:isScrollContainer="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/label_settings"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/factorystngs"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:drawableStart="@android:drawable/ic_menu_manage" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_save" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/settingsScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/settingsHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deliverySpeedLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_delivery_speed" />

                <EditText
                    android:id="@+id/setting1"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tensionDraftLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_tension_draft" />

                <EditText
                    android:id="@+id/setting2"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cylinderSpeedLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_cylinder_speed" />

                <EditText
                    android:id="@+id/setting3"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cylinderFeedLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_cylinder_feed" />

                <EditText
                    android:id="@+id/setting4"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beaterSpeedLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_beater_speed" />

                <EditText
                    android:id="@+id/setting5"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BeaterFeedLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_beater_feed" />

                <EditText
                    android:id="@+id/setting6"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/conveyorSpeedLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_conveyor_speed" />

                <EditText
                    android:id="@+id/setting7"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trunkDelayLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_trunk_delay" />

                <EditText
                    android:id="@+id/setting8"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/LengthLimitlabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_length_limit" />

                <EditText
                    android:id="@+id/setting9"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/LengthCorrection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_length_correction" />

                <EditText
                    android:id="@+id/setting10"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    tools:ignore="LabelFor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
